--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "license": "ISC",
     "dependencies": {
         "jquery": "^3",
+        "requirejs": "^2.3",
         "underscore": "^1.7.0",
         "backbone": "^1.4",
         "backbone.localstorage": "^2",
@@ -20,8 +21,5 @@
         "moment": "^2",
         "bootstrap": "^4",
         "bootswatch": "^4"
-    },
-    "peerDependencies": {
-        "backbone": "^1.3.3"
     }
 }
